# EVersion

./: CMakeLists.txt  README.md
cmake/: EVersionConfig.cmake.in  EVersionDeclare.cmake
include/eversion/: runtime.h  version.h
include/eversion/detail/: semver_precedence.h
templates/: plugin_info.cc.in  version_info.h.in
tests/: CMakeLists.txt  plugin_info_test.cc  runtime_test.cc  version_declare_test.cc  version_test.cc
tests/install_consumer/: CMakeLists.txt  main.cpp
